--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,36 @@
+alabaster==0.7.11
+atomicwrites==1.1.5
+attrs==18.1.0
+Babel==2.6.0
 certifi==2018.8.13
 chardet==3.0.4
+colorama==0.3.9
+dataframe==0.2.1.3
+docutils==0.14
+elasticsearch==6.3.1
 idna==2.7
+imagesize==1.0.0
+Jinja2==2.10
+MarkupSafe==1.0
+more-itertools==4.3.0
 mysql-connector==2.1.6
+nose==1.3.7
 numpy==1.15.0
+packaging==17.1
+pandas==0.23.4
+pluggy==0.7.1
+py==1.5.4
+Pygments==2.2.0
+pyparsing==2.2.0
+pytest==3.7.2
+python-dateutil==2.7.3
 pytz==2018.5
 requests==2.19.1
+scipy==1.1.0
+six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.7
+sphinxcontrib-websupport==1.1.0
+SQLAlchemy==1.2.10
+tabulate==0.8.2
 urllib3==1.23
